parser/src/snapshots/rustpython_parser__parser__tests__parse_class_with_nac3comment.snap
---
source: parser/src/parser.rs
expression: parse_program(&source).unwrap()

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: ClassDef {
            name: "Foo",
            bases: [
                Located {
                    location: Location {
                        row: 1,
                        column: 11,
                    },
                    custom: (),
                    node: Name {
                        id: "A",
                        ctx: Load,
                    },
                },
                Located {
                    location: Location {
                        row: 1,
                        column: 14,
                    },
                    custom: (),
                    node: Name {
                        id: "B",
                        ctx: Load,
                    },
                },
            ],
            keywords: [],
            body: [
                Located {
                    location: Location {
                        row: 2,
                        column: 5,
                    },
                    custom: (),
                    node: AnnAssign {
                        target: Located {
                            location: Location {
                                row: 2,
                                column: 5,
                            },
                            custom: (),
                            node: Name {
                                id: "a",
                                ctx: Load,
                            },
                        },
                        annotation: Located {
                            location: Location {
                                row: 2,
                                column: 8,
                            },
                            custom: (),
                            node: Name {
                                id: "int32",
                                ctx: Load,
                            },
                        },
                        value: None,
                        simple: true,
                        config_comment: [
                            "no_warn_unused_1",
                        ],
                    },
                },
                Located {
                    location: Location {
                        row: 5,
                        column: 12,
                    },
                    custom: (),
                    node: AnnAssign {
                        target: Located {
                            location: Location {
                                row: 8,
                                column: 5,
                            },
                            custom: (),
                            node: Name {
                                id: "b",
                                ctx: Load,
                            },
                        },
                        annotation: Located {
                            location: Location {
                                row: 8,
                                column: 8,
                            },
                            custom: (),
                            node: Name {
                                id: "int64",
                                ctx: Load,
                            },
                        },
                        value: None,
                        simple: true,
                        config_comment: [
                            "no_warn_unused_2",
                        ],
                    },
                },
                Located {
                    location: Location {
                        row: 10,
                        column: 5,
                    },
                    custom: (),
                    node: AnnAssign {
                        target: Located {
                            location: Location {
                                row: 10,
                                column: 5,
                            },
                            custom: (),
                            node: Name {
                                id: "c",
                                ctx: Load,
                            },
                        },
                        annotation: Located {
                            location: Location {
                                row: 10,
                                column: 8,
                            },
                            custom: (),
                            node: Name {
                                id: "int32",
                                ctx: Load,
                            },
                        },
                        value: None,
                        simple: true,
                        config_comment: [],
                    },
                },
                Located {
                    location: Location {
                        row: 11,
                        column: 5,
                    },
                    custom: (),
                    node: FunctionDef {
                        name: "__init__",
                        args: Arguments {
                            posonlyargs: [],
                            args: [
                                Located {
                                    location: Location {
                                        row: 11,
                                        column: 18,
                                    },
                                    custom: (),
                                    node: ArgData {
                                        arg: "self",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [],
                        },
                        body: [
                            Located {
                                location: Location {
                                    row: 12,
                                    column: 16,
                                },
                                custom: (),
                                node: For {
                                    target: Located {
                                        location: Location {
                                            row: 13,
                                            column: 13,
                                        },
                                        custom: (),
                                        node: Name {
                                            id: "p",
                                            ctx: Load,
                                        },
                                    },
                                    iter: Located {
                                        location: Location {
                                            row: 13,
                                            column: 20,
                                        },
                                        custom: (),
                                        node: Tuple {
                                            elts: [
                                                Located {
                                                    location: Location {
                                                        row: 13,
                                                        column: 20,
                                                    },
                                                    custom: (),
                                                    node: Constant {
                                                        value: Str(
                                                            "123",
                                                        ),
                                                        kind: None,
                                                    },
                                                },
                                                Located {
                                                    location: Location {
                                                        row: 13,
                                                        column: 26,
                                                    },
                                                    custom: (),
                                                    node: Constant {
                                                        value: Int(
                                                            2,
                                                        ),
                                                        kind: None,
                                                    },
                                                },
                                            ],
                                            ctx: Load,
                                        },
                                    },
                                    body: [
                                        Located {
                                            location: Location {
                                                row: 14,
                                                column: 13,
                                            },
                                            custom: (),
                                            node: Pass,
                                        },
                                    ],
                                    orelse: [],
                                    type_comment: None,
                                    config_comment: [
                                        "unroll",
                                    ],
                                },
                            },
                        ],
                        decorator_list: [],
                        returns: None,
                        type_comment: None,
                    },
                },
            ],
            decorator_list: [],
        },
    },
]
